Min.Tests/Samples/ValidSamples/source-02.min
.name string = "min"
.name = "123"