Min.Tests/Samples/InvalidSamples/source-05.min
.name string = "min"
.name string = "test"
